--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,28 @@ ul {
     list-style: none;
 }
 
+:root {
+    font-size: 62.5%;
+    /*10px*/
+}
+
 body {
     background: #ece9fd;
 
-    padding: 60px 23px 66px;
+    padding: 6.0rem 2.3rem 6.6rem;
+
+    font-family: 'Epilogue', sans-serif;
+    font-size: 1.6rem;
 }
 
 h1 {
-    font-family: 'Epilogue', sans-serif;
+    font-size: 2.5rem;
+    line-height: 3rem;
+}
+
+main p:first-child {
+    color: #7158ef;
+
+    letter-spacing: 0.3rem;
+    text-transform: uppercase;
 }
