--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,68 @@ body {
     font-size: 1.6rem;
 }
 
+main {
+    max-width: 33rem;
+    margin: 0 auto;
+}
+
 h1 {
+    font-weight: 800;
     font-size: 2.5rem;
     line-height: 3rem;
+
+    margin-bottom: 1.5rem;
 }
 
 main p:first-child {
     color: #7158ef;
 
-    letter-spacing: 0.3rem;
+    letter-spacing: 3px;
     text-transform: uppercase;
+    line-height: 3.2rem;
+
+    margin-bottom: 1.7rem;
+}
+
+h1+p {
+    color: rgba(10, 0, 57, 0.64);
+
+    line-height: 3.2rem;
+
+    margin-bottom: 3.2rem;
+}
+
+a {
+    color: #090039;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #7158ef;
+    font-weight: bold;
+}
+
+ul {
+    margin-top: 7.2rem;
+}
+
+ul li {
+    font-weight: 700;
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+
+    max-width: 25.7rem;
+
+    display: flex;
+    gap: 3.8rem;
+
+}
+
+ul li span {
+    font-weight: 800;
+    font-size: 7.2rem;
+    line-height: 8.0rem;
+    letter-spacing: -2px;
+
+
 }
